A bit of refactoring.

--- a/prog-typing-game/CMakeLists.txt
+++ b/prog-typing-game/CMakeLists.txt
@@ -6,5 +6,9 @@ find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 
 
-add_executable(prog-typing-game main.cc)
+add_executable(prog-typing-game
+	main.cc
+	Window.cc
+	)
+	
 target_link_libraries(prog-typing-game ${SDL2_LIBRARIES})
