A bit more versatile resource manager

--- a/prog-typing-game/CMakeLists.txt
+++ b/prog-typing-game/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(prog-typing-game
 	main.cc
 	Window.cc
 	GameWindow.cc
+	ResourceManager.cc
 	)
 	
 target_link_libraries(prog-typing-game ${SDL2_LIBRARIES})
